# DecRAS

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  EMERGENT_ROBOTICS_PLAN.md  EXPERIMENT_REPORT_2026_05_18.md  PROJECT_STATUS.md  WORKFLOW.md  calibration.json  docker-compose.yml  move_to_delta_validation.ipynb  pyproject.toml  test_primitives.ipynb
.github/ISSUE_TEMPPLATE/: claude-code-tasks.md
.github/workflows/: daily-pulse.yml  sync-decisions.yml
calibration/: record_grid.py  validate_grid.py
control/: __init__.py  executor.py  joint_lookup.py  trajectory.py
decras/imitation/: retrieval.py  store.py
demos/: sticks_v2_ep000_medium.json
llm_controller/: __main__.py  config.py  llm.py  main.py  mcp_client.py  prompt.py
mcp_server/: __main__.py  config.py  episode.py  history.py  interaction_log.py  server.py
mcp_server/perception/: camera.py  detector.py  scene_graph.py
mcp_server/robot/: kinematics.py  lerobot.py
mcp_server/sim/: base.py  (+1 more)
scripts/: add_demo.py  calibrate.py  calibrate_leader.py  daily_pulse.py  record_teleop.py  replay.py  replay_sequence.py  replay_teleop.py  runpod_start.sh  segment_trajectory.py  test_hardware.py  test_mcp.py  validate_gravity.py  visualize_trajectory.py
tests/: conftest.py  test_config.py  test_episode.py  test_executor.py  test_history.py  test_interaction_log.py  test_joint_lookup.py  test_kinematics.py  test_perception.py  test_primitives.py  test_prompt.py  test_record_grid.py  test_server_tools.py  test_sim.py  test_store.py  test_trajectory.py
(+27 files in other folders)
